k8s/03-frontend.yaml
# ==============================================================================
# BƯỚC 3: NEXT.JS FRONTEND
# Tương đương với block 'frontend' trong docker-compose.yml
# File này gồm: Ứng dụng (Deployment) + Mạng nội bộ (Service)
# ==============================================================================

# --- PHẦN 1: CHẠY CONTAINER FRONTEND ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: p069-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 20

---
# --- PHẦN 2: ĐẶT TÊN MẠNG NỘI BỘ (Để Ingress gọi vào: frontend:8080) ---
apiVersion: v1
kind: Service
metadata:
  name: frontend            # Tên DNS nội bộ: frontend:8080
spec:
  type: NodePort            
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 30135
